[package]
name = "checkout"
version = "0.1.5"
authors = ["Thibaut Roche <thibaut.roche.perso@gmail.com>"]
description = "Rust implementation of the Checkout payment system"
license = "MIT"
repository = "https://github.com/Aeradriel/checkout_rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.20"
log = "0.4.8"
serde = "1.0.106"
serde_qs = "0.5.2"
json_errors = { version = "0.5.4", features = ["reqwest"] }
serde_json = "1.0.51"
